# QInteractiveBrokers

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README  README.md  config.h.in  feed_handler.h  ib.q  ib_wrapper.h  k.h  run_test.sh
IB Feed Handler.xcodeproj/: project.pbxproj
IB Feed Handler.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
IB Feed Handler.xcodeproj/project.xcworkspace/xcuserdata/morten.xcuserdatad/: UserInterfaceState.xcuserstate
IB Feed Handler.xcodeproj/xcuserdata/morten.xcuserdatad/xcschemes/: IB Feed Handler Doc.xcscheme  IB Feed Handler.xcscheme  xcschememanagement.plist
app/: debug.q  debug.sh  ib.q  syms.csv
src/: IBClient.cpp  IBClient.h  helpers.h  qib.cpp  qib.h
test/: test_qib.q
